manifest/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: nginx.k8s.local
    http:
      paths:
      - backend:
         service:
            name: nginx-service
            port:
              number: 80
        path: /
        pathType: Prefix
